--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                 <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-light text-danger rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#protocolo">📝 PROTOCOLO</a>
-                        </li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#calendario">📆 CALENDÁRIO</a>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#protocolo">📆 CALENDÁRIO</a>
                         </li>
                     </ul>
                 </div>
@@ -35,7 +33,7 @@
                 <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/sketch.svg" alt="Consulta Pública">
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading mb-0">CONSULTA PÚBLICA</h1>
-<p class="lead">sobre o protocolo de retorno das aulas presenciais e o calendário escolar 2021.</p>
+<p class="lead">à comunidade escolar sobre calendário letivo de 2022.</p>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
