--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-light text-danger rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#protocolo">📆 CALENDÁRIO</a>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#calendario">📆 CALENDÁRIO</a>
                         </li>
                     </ul>
                 </div>
@@ -42,48 +42,14 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="pre-wrap masthead-subheading font-weight-light mb-0"> 
-                	Considerando a importância da parceria e da opinião de toda comunidade escolar, a Prefeitura Municipal de Guamaré(RN), através da Secretaria Municipal de Educação, elaborou uma consulta pública que estará direcionada aos pais, professores, funcionários da Educação e toda a <mark>comunidade escolar</mark> sobre o retorno das aulas presenciais na rede municipal de educação.
+                	Considerando a importância da parceria e da opinião de toda comunidade escolar, a Prefeitura Municipal de Guamaré(RN), através da Secretaria Municipal de Educação, elaborou uma consulta pública que estará direcionada aos pais, professores, funcionários da Educação e toda a <mark>comunidade escolar</mark> sobre o calendário escolar da rede municipal de educação em 2022.
 
-                	Para isso a SME disponibilizou a minuta do Protocolo de Volta às Aulas em Segurança, elaborado pela equipe técnica da secretaria. Assim como o <mark>Calendário Escolar</mark> de 2020, para consulta, e o de 2021, para que todos participem opinando sobre o calendário letivo.
+                	Para isso a SME está disponibilizando 05(cinco) propostas de calendário escolar para o ano de 2022, elaboradas pela equipe técnico-pedagógica da secretaria, para que toda a comunidade escolar participe opinando sobre o calendário letivo.
 
-                	Neste momento tão desafiador e de grande compromisso de todos nós com a Educação, <mark>é muito importante que todos respondam</mark> para que possamos nos planejar para um futuro retorno das aulas presenciais. Esperamos contar com a participação de todos!
+                	Neste momento tão desafiador e de grande compromisso de todos nós com a Educação, <mark>é muito importante que todos respondam</mark> para que possamos nos planejar o nosso calendário de forma mais colaborativa possível. Esperamos contar com a participação de todos!
 </p>
             </div>
         </header>
-<img src="assets/img/bg_protocolo.png" class="img-fluid" alt="Protocolo de Volta às Aulas">
-
-        <section class="page-section  mb-0" id="protocolo">
-            <div class="container">
-                <!-- About Section Heading-->
-                <div class="text-center">
-                    <h2 class="page-section-heading text-info d-inline-block">Protocolo</h2>
-                </div>
-                <!-- Icon Divider-->
-                <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-comment"></i></div>
-                    <div class="divider-custom-line"></div>
-                </div>
-                <!-- About Section Content-->
-                <p class="pre-wrap masthead-subheading font-weight-light mb-0">
-                	Em face da pandemia do coronavírus (COVID-19), o dia a dia da população guamareense, assim como em todo o mundo, precisou de uma reorganização, com a devida adequação de medidas, em especial, o isolamento social como forma de reduzir o contato entre as pessoas e como contenção da propagação e contágio acelerado do vírus. Nesse sentido, uma consequência no âmbito educacional no município, foi à suspensão das atividades escolares presenciais, o que ocorreu no dia 18 de março do ano em curso, em decorrência do Decreto Municipal no 008/2020, de 17 de março de 2020. 
-
-                	Durante esse tempo a Rede Municipal de Educação entregou kits de alimentação escolar em casa e, seguindo o Plano de Atividades Remotas, distribuiu cadernos de atividades impressas e realizou ainda lives de orientação complementares. 
-
-                	Contudo, é preciso estar devidamente preparado para quando chegar o momento de retornarmos as aulas presenciais. E este documento procura justamente estabelecer critérios e etapas para a retomada gradual das atividades escolares, iniciando pelo Ensino Fundamental (anos iniciais e anos finais) regular e Educação de Jovens e Adultos – EJA, seguido pela Pré-escola e, por último, pela Creche, ressaltando que a retomada da etapa seguinte depende dos critérios estabelecidos e do controle dos indicadores. Por fim, o documento orienta como se dará a comunicação interna dentro da escola e da rede e a comunicação externa com famílias e comunidade, recomendando também medidas de promoção à saúde e de combate ao preconceito e à fake news.
-                    
-                    <div class="alert alert-danger" role="alert">
-  <b>Observação:</b> Consulta Pública sobre o Protocolo foi encerrada na última semana de dezembro de 2020. O Protocolo foi aprovado pelo CME e o Comitê Municipal de Enfrentamento. 
-</div>
-
-
-                	<div class="btn-group btn-group-lg" role="group" aria-label="Documento Protocolo">
-                        <a button type="button" class="btn btn-secondary" href="docs/protocolo_final.pdf"> ✅ Protocolo(1ª  Edição)</a>
-                        <a button type="button" class="btn btn-success" href="docs/protocolo_ed2.pdf"> ✅ Protocolo(2ª  Edição)</a>
-                		<a button type="button" class="btn btn-primary" href="https://forms.gle/dzpxVsHY2Nr5drgJ8"> 💬 Consulta Pública(encerrada) </a></div>
-            </div>
-            <p>
-        </section>
 <img src="assets/img/bg_calendario.png" class="img-fluid" alt="Calendário Escolar">
 
 
@@ -91,7 +57,7 @@
             <div class="container">
                 <!-- Contact Section Heading-->
                 <div class="text-center">
-                    <h2 class="page-section-heading text-danger d-inline-block mb-0">Calendário Escolar</h2>
+                    <h2 class="page-section-heading text-danger d-inline-block mb-0">Calendário Escolar 2022</h2>
                 </div>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
