--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="pre-wrap masthead-subheading font-weight-light mb-0"> 
-                	Considerando a importância da parceria e da opinião de toda comunidade escolar, a Prefeitura Municipal de Guamaré(RN), através da Secretaria Municipal de Educação, elaborou uma consulta pública que estará direcionada aos pais, professores, funcionários da Educação e toda a <mark>comunidade escolar</mark> sobre o calendário escolar da rede municipal de educação em 2022.
+Considerando a importância da parceria e da opinião de toda comunidade escolar, a Prefeitura Municipal de Guamaré(RN), através da Secretaria Municipal de Educação, elaborou uma consulta pública que está direcionada aos pais, professores, funcionários da Educação e toda a <mark>comunidade escolar</mark> sobre o calendário da rede municipal de educação em 2022.
 
-                	Para isso a SME está disponibilizando 05(cinco) propostas de calendário escolar para o ano de 2022, elaboradas pela equipe técnico-pedagógica da secretaria, para que toda a comunidade escolar participe opinando sobre o calendário letivo.
+Em função disso, a SME está disponibilizando 05(cinco) propostas de calendário escolar para o ano de 2022, todas elaboradas pela equipe técnico-pedagógica da secretaria, para que a comunidade escolar participe ativamente no processo de confecção do calendário escolar 2022.
 
-                	Neste momento tão desafiador e de grande compromisso de todos nós com a Educação, <mark>é muito importante que todos respondam</mark> para que possamos nos planejar o nosso calendário de forma mais colaborativa possível. Esperamos contar com a participação de todos!
+Neste momento tão desafiador  e de grande compromisso de todos nós com a Educação, <mark>é muito importante que todos respondam</mark> para que possamos planejar o calendário da forma mais colaborativa possível. É fundamental a sua participação!
 </p>
             </div>
         </header>
