--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <link rel="stylesheet" href="css/body.css">
     </head>
     <body id="page-top">
-        	    <img src="assets/img/bg_assinatura.png" class="img-fluid" alt="Volta às Aulas em Segurança">
+        	    <img src="assets/img/bg_assinatura.png" class="img-fluid" alt="Calendário Escolar 2022">
 
         <header class="masthead bg-danger text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/sketch.svg" alt="Consulta Pública">
+                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/calendar.svg" alt="Consulta Pública">
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading mb-0">CONSULTA PÚBLICA</h1>
 <p class="lead">à comunidade escolar sobre calendário letivo de 2022.</p>
@@ -34,8 +34,6 @@
 Considerando a importância da parceria e da opinião de toda comunidade escolar, a Prefeitura Municipal de Guamaré(RN), através da Secretaria Municipal de Educação, elaborou uma consulta pública que está direcionada aos pais, professores, funcionários da Educação e toda a <mark>comunidade escolar</mark> sobre o calendário da rede municipal de educação em 2022.
 
 Em função disso, a SME está disponibilizando 05(cinco) propostas de calendário escolar para o ano de 2022, todas elaboradas pela equipe técnico-pedagógica da secretaria, para que a comunidade escolar participe ativamente no processo de confecção do calendário escolar 2022.
-
-Neste momento tão desafiador  e de grande compromisso de todos nós com a Educação, <mark>é muito importante que todos respondam</mark> para que possamos planejar o calendário da forma mais colaborativa possível. É fundamental a sua participação!
 </p>
             </div>
         </header>
