--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body id="page-top">
         	    <img src="assets/img/bg_assinatura.png" class="img-fluid" alt="Calendário Escolar 2022">
 
-        <header class="masthead bg-primary text-white text-center">
+        <header class="masthead bg-warning text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/calendar.svg" alt="Consulta Pública">
                 <!-- Masthead Heading-->
