--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     </head>
     <body id="page-top">
         	    <img src="assets/img/bg_assinatura.png" class="img-fluid" alt="Calendário Escolar 2022">
-
-        <header class="masthead bg-warning text-primary text-center">
+        <header class="masthead bg-danger text-primary text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/calendar.svg" alt="Consulta Pública">
                 <!-- Masthead Heading-->
@@ -37,9 +36,6 @@ Em função disso, a SME está disponibilizando 05(cinco) propostas de calendár
 </p>
             </div>
         </header>
-<img src="assets/img/bg_calendario.png" class="img-fluid" alt="Calendário Escolar">
-
-
         <section class="page-section" id="calendario">
             <div class="container">
                 <!-- Contact Section Heading-->
