--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body id="page-top">
         	    <img src="assets/img/bg_assinatura.png" class="img-fluid" alt="Calendário Escolar 2022">
-        <header class="masthead bg-danger text-primary text-center">
+        <header class="masthead bg-danger text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/calendar.svg" alt="Consulta Pública">
                 <!-- Masthead Heading-->
@@ -64,8 +64,8 @@ Em função disso, a SME está disponibilizando 05(cinco) propostas de calendár
             </div>
 
                 <div class="btn-group btn-group-lg" role="group" aria-label="Propostas de Calendário">
-  				<a button type="button" class="btn btn-secondary" href="docs/calendario.pdf"> 📆 Proposta 02 <a>
-  				<a button type="button" class="btn btn-success" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Sugestões da Proposta 02 </a>/p>
+  				<a button type="button" class="btn btn-secondary" href="docs/calendario.pdf"> 📆 Proposta 02 <a></p>
+  				<a button type="button" class="btn btn-success" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Sugestões da Proposta 02 </a></p>
   				<a button type="button" class="btn btn-secondary" href="docs/calendario.pdf"> 📆 Proposta 03 <a>
   				<a button type="button" class="btn btn-warning" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Sugestões da Proposta 03 </a></p>
   				<a button type="button" class="btn btn-secondary" href="docs/calendario.pdf"> 📆 Proposta 04 <a>
