--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Em função disso, a SME está disponibilizando 05(cinco) propostas de calendár
             <div class="container">
                 <!-- Contact Section Heading-->
                 <div class="text-center">
-                    <h2 class="page-section-heading text-danger d-inline-block mb-0">Calendário Escolar 2022</h2>
+                    <h2 class="page-section-heading text-danger d-inline-block mb-0">As Propostas</h2>
                 </div>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
@@ -58,20 +58,26 @@ Em função disso, a SME está disponibilizando 05(cinco) propostas de calendár
                 	Sendo assim, a Comunidade Escolar, após fazer a leitura do documento disponibilizado aqui, poderá dar a sua contribuição através do formulário abaixo.
 
 
-                <div class="btn-group btn-group-lg" role="group" aria-label="Documento Calendário 01">
+                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 1">
   				<a button type="button" class="btn btn-secondary" href="docs/calendario.pdf"> 📆 Proposta 01 <a>
   				<a button type="button" class="btn btn-danger" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Sugestões da Proposta 01 </a></div></p>
             </div>
 
-                <div class="btn-group btn-group-lg" role="group" aria-label="Propostas de Calendário">
-  				<a button type="button" class="btn btn-secondary" href="docs/calendario.pdf"> 📆 Proposta 02 <a></p>
+                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 2">
+  				<a button type="button" class="btn btn-secondary" href="docs/calendario_proposta01.pdf"> 📆 Proposta 02 <a></p>
   				<a button type="button" class="btn btn-success" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Sugestões da Proposta 02 </a></p>
-  				<a button type="button" class="btn btn-secondary" href="docs/calendario.pdf"> 📆 Proposta 03 <a>
+            </div>
+                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 3">
+  				<a button type="button" class="btn btn-secondary" href="docs/calendario_proposta02.pdf"> 📆 Proposta 03 <a>
   				<a button type="button" class="btn btn-warning" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Sugestões da Proposta 03 </a></p>
-  				<a button type="button" class="btn btn-secondary" href="docs/calendario.pdf"> 📆 Proposta 04 <a>
-  				<a button type="button" class="btn btn-primary" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Sugestões da Proposta 04 </a></p>
-  				<a button type="button" class="btn btn-secondary" href="docs/calendario.pdf"> 📆 Proposta 05 <a>
-  				<a button type="button" class="btn btn-info" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Sugestões da Proposta 05 </a></p>
+            </div>
+                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 4">
+  				<a button type="button" class="btn btn-secondary" href="docs/calendario_proposta03.pdf"> 📆 Proposta 04 <a>
+  				<a button type="button" class="btn btn-danger" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Sugestões da Proposta 04 </a></p>
+            </div>
+                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 5">
+  				<a button type="button" class="btn btn-secondary" href="docs/calendario_proposta05.pdf"> 📆 Proposta 05 <a>
+  				<a button type="button" class="btn btn-warning" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Sugestões da Proposta 05 </a></p>
             </div>
 </p>
 
