--- a/index.html
+++ b/index.html
@@ -59,26 +59,26 @@ Em função disso, a SME está disponibilizando 05(cinco) propostas de calendár
 
 
                 <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 1">
-  				<a button type="button" class="btn btn-secondary" href="docs/calendario.pdf"> 📆 Proposta 01 <a>
-  				<a button type="button" class="btn btn-danger" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Sugestões da Proposta 01 </a></div></p>
+  				<a button type="button" class="btn btn-secondary" href="docs/calendario1.pdf"> 📆 Proposta 01 <a>
+  				<a button type="button" class="btn btn-danger" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Sugestões para esta proposta.</a></div></p>
+            </div> 
+                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 2">
+  				<a button type="button" class="btn btn-secondary" href="docs/calendario2.pdf"> 📆 Proposta 02 <a>
+  				<a button type="button" class="btn btn-danger" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Sugestões para esta proposta.</a></div></p>
+            </div>
+                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 1">
+  				<a button type="button" class="btn btn-secondary" href="docs/calendario3.pdf"> 📆 Proposta 03 <a>
+  				<a button type="button" class="btn btn-danger" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Sugestões para esta proposta.</a></div></p>
+            </div>
+                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 1">
+  				<a button type="button" class="btn btn-secondary" href="docs/calendario4.pdf"> 📆 Proposta 04 <a>
+  				<a button type="button" class="btn btn-danger" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Sugestões para esta proposta.</a></div></p>
+            </div>
+                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 1">
+  				<a button type="button" class="btn btn-secondary" href="docs/calendario5.pdf"> 📆 Proposta 05 <a>
+  				<a button type="button" class="btn btn-danger" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Sugestões para esta proposta.</a></div></p>
             </div>
 
-                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 2">
-  				<a button type="button" class="btn btn-secondary" href="docs/calendario_proposta01.pdf"> 📆 Proposta 02 <a></p>
-  				<a button type="button" class="btn btn-success" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Sugestões da Proposta 02 </a></p>
-            </div>
-                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 3">
-  				<a button type="button" class="btn btn-secondary" href="docs/calendario_proposta02.pdf"> 📆 Proposta 03 <a>
-  				<a button type="button" class="btn btn-warning" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Sugestões da Proposta 03 </a></p>
-            </div>
-                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 4">
-  				<a button type="button" class="btn btn-secondary" href="docs/calendario_proposta03.pdf"> 📆 Proposta 04 <a>
-  				<a button type="button" class="btn btn-danger" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Sugestões da Proposta 04 </a></p>
-            </div>
-                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 5">
-  				<a button type="button" class="btn btn-secondary" href="docs/calendario_proposta05.pdf"> 📆 Proposta 05 <a>
-  				<a button type="button" class="btn btn-warning" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Sugestões da Proposta 05 </a></p>
-            </div>
 </p>
 
 
