--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@ Em função disso, a SME está disponibilizando 05(cinco) propostas de calendár
             </div> 
                 <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 2">
   				<a button type="button" class="btn btn-secondary" href="docs/calendario2.pdf"> 📆 Proposta 02 <a>
-  				<a button type="button" class="btn btn-danger" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Sugestões para esta proposta.</a></div></p>
+  				<a button type="button" class="btn btn-primary" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Sugestões para esta proposta.</a></div></p>
             </div>
                 <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 1">
   				<a button type="button" class="btn btn-secondary" href="docs/calendario3.pdf"> 📆 Proposta 03 <a>
-  				<a button type="button" class="btn btn-danger" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Sugestões para esta proposta.</a></div></p>
+  				<a button type="button" class="btn btn-warning" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Sugestões para esta proposta.</a></div></p>
             </div>
                 <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 1">
   				<a button type="button" class="btn btn-secondary" href="docs/calendario4.pdf"> 📆 Proposta 04 <a>
@@ -76,7 +76,7 @@ Em função disso, a SME está disponibilizando 05(cinco) propostas de calendár
             </div>
                 <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 1">
   				<a button type="button" class="btn btn-secondary" href="docs/calendario5.pdf"> 📆 Proposta 05 <a>
-  				<a button type="button" class="btn btn-danger" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Sugestões para esta proposta.</a></div></p>
+  				<a button type="button" class="btn btn-info" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Sugestões para esta proposta.</a></div></p>
             </div>
 
 </p>
