--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/body.css">
     </head>
     <body id="page-top">
-        	    <img src="assets/img/bg_assinatura.png" class="img-fluid" alt="Calendário Escolar 2022">
+        <img src="assets/img/bg_assinatura.png" class="img-fluid" alt="Calendário Escolar 2022">
         <header class="masthead bg-danger text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/calendar.svg" alt="Consulta Pública">
@@ -30,9 +30,9 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="pre-wrap masthead-subheading font-weight-light mb-0"> 
-Considerando a importância da parceria e da opinião de toda comunidade escolar, a Prefeitura Municipal de Guamaré(RN), através da Secretaria Municipal de Educação, elaborou uma consulta pública que está direcionada aos pais, professores, funcionários da Educação e toda a <mark>comunidade escolar</mark> sobre o calendário da rede municipal de educação em 2022.
+Considerando a importância da parceria e da opinião de toda comunidade escolar, a Prefeitura Municipal de Guamaré(RN), através da Secretaria Municipal de Educação, elaborou uma consulta pública que está direcionada aos pais, professores, funcionários da Educação e toda a <mark>comunidade escolar</mark> sobre o calendário da rede municipal de educação para o ano de 2022.
 
-Em função disso, a SME está disponibilizando 05(cinco) propostas de calendário escolar para o ano de 2022, todas elaboradas pela equipe técnico-pedagógica da secretaria, para que a comunidade escolar participe ativamente no processo de confecção do calendário escolar 2022.
+Em função disso, a SME está disponibilizando 05(cinco) propostas de calendário letivo para 2022, todas elaboradas pela equipe técnico-pedagógica da secretaria, para que assim a comunidade escolar possa participar ativamente do processo de confecção do calendário escolar. <mark>Sua participação é fundamental</mark>.
 </p>
             </div>
         </header>
