--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p class="pre-wrap masthead-subheading font-weight-light mb-0"> 
 Considerando a importância da parceria e da opinião de toda comunidade escolar, a Prefeitura Municipal de Guamaré(RN), através da Secretaria Municipal de Educação, elaborou uma consulta pública que está direcionada aos pais, professores, funcionários da Educação e toda a <mark>comunidade escolar</mark> sobre o calendário da rede municipal de educação para o ano de 2022.
 
-Em função disso, a SME está disponibilizando 05(cinco) propostas de calendário letivo para 2022, todas elaboradas pela equipe técnico-pedagógica da secretaria, para que assim a comunidade escolar possa participar ativamente do processo de confecção do calendário escolar. <mark>Sua participação é fundamental</mark>.
+Em função disso, a SME está disponibilizando 04(quatro) propostas de calendário letivo para 2022, todas elaboradas pela equipe técnico-pedagógica da secretaria, para que assim a comunidade escolar possa participar ativamente do processo de confecção do calendário escolar. <mark>Sua participação é fundamental</mark>.
 </p>
             </div>
         </header>
@@ -58,21 +58,15 @@ Em função disso, a SME está disponibilizando 05(cinco) propostas de calendár
                 	Sendo assim, a Comunidade Escolar, após fazer a leitura do documento disponibilizado aqui, poderá dar a sua contribuição através do formulário abaixo.
 
 
-                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 1">
-  				<a button type="button" class="btn btn-secondary" href="docs/calendario1.pdf"> 📆 Proposta 01 <a>
-  				<a button type="button" class="btn btn-danger" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Sugestões para esta proposta.</a></div></p>
-                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 2">
-  				<a button type="button" class="btn btn-secondary" href="docs/calendario2.pdf"> 📆 Proposta 02 <a>
-  				<a button type="button" class="btn btn-primary" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Sugestões para esta proposta.</a></div></p>
-                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 1">
-  				<a button type="button" class="btn btn-secondary" href="docs/calendario3.pdf"> 📆 Proposta 03 <a>
-  				<a button type="button" class="btn btn-warning" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Sugestões para esta proposta.</a></div></p>
-                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 1">
-  				<a button type="button" class="btn btn-secondary" href="docs/calendario4.pdf"> 📆 Proposta 04 <a>
-  				<a button type="button" class="btn btn-danger" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Sugestões para esta proposta.</a></div></p>
-                <div class="btn-group btn-group-lg" role="group" aria-label="Proposta de Calendário 1">
-  				<a button type="button" class="btn btn-secondary" href="docs/calendario5.pdf"> 📆 Proposta 05 <a>
-  				<a button type="button" class="btn btn-info" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Sugestões para esta proposta.</a></div></p>
+                <div class="btn-group btn-group-lg" role="group" aria-label="Propostas de Calendário">
+  				<a button type="button" class="btn btn-primary" href="docs/calendario1.pdf"> 📆 Proposta 01 <a>
+                <a button type="button" class="btn btn-secondary" href="docs/calendario2.pdf"> 📆 Proposta 02 <a>
+  				<a button type="button" class="btn btn-danger" href="docs/calendario3.pdf"> 📆 Proposta 03 <a>
+                <a button type="button" class="btn btn-warning" href="docs/calendario4.pdf"> 📆 Proposta 04 <a></div></p>
+            </div>
+                    
+                    <div class="btn-group btn-group-lg" role="group" aria-label="Formulário de Participação">
+  				<a button type="button" class="btn btn-info" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Participação</a></div></p>
             </div>
 
 </p>
