--- a/index.html
+++ b/index.html
@@ -59,17 +59,14 @@ Em função disso, a SME está disponibilizando 04(quatro) propostas de calendá
 
 
               <div class="btn-group btn-group-lg" role="group" aria-label="Propostas">
-                 <a button type="button" class="btn btn-secondary" href="docs/calendario1.pdf"> 📆 Proposta 01</a>
-                 <a button type="button" class="btn btn-success" href="docs/calendario2.pdf"> 📆 Proposta 02</a>
-                 <a button type="button" class="btn btn-success" href="docs/calendario3.pdf"> 📆 Proposta 03</a>
-                 <a button type="button" class="btn btn-primary" href="docs/calendario4.pdf"> 📆 Proposta 04</a></div>
+                 <a button type="button" class="btn btn-primary" href="docs/calendario1.pdf"> 📆 Proposta 01</a>
+                 <a button type="button" class="btn btn-secondary" href="docs/calendario2.pdf"> 📆 Proposta 02</a>
+                 <a button type="button" class="btn btn-danger" href="docs/calendario3.pdf"> 📆 Proposta 03</a>
+                 <a button type="button" class="btn btn-warning" href="docs/calendario4.pdf"> 📆 Proposta 04</a></div>
             </div>
             <p>
-                    
-                    <div class="btn-group btn-group-lg" role="group" aria-label="Formulário">
-  				<a button type="button" class="btn btn-info" href="https://forms.gle/ZZjp88aHh7SiKo5X9"> 💬 Formulário de Participação</a></div></p>
-            </div>
 
+                <img src="assets/img/bg_calendario.png" href="https://forms.gle/ZZjp88aHh7SiKo5X9 class="img-fluid" alt="Participe">
 </p>
 
 
