--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@ Em função disso, a SME está disponibilizando 04(quatro) propostas de calendá
                  <a button type="button" class="btn btn-warning" href="docs/calendario4.pdf"> 📆 Proposta 04</a></div>
             </div>
             <p>
-
-                <img src="assets/img/bg_calendario.png" href="https://forms.gle/ZZjp88aHh7SiKo5X9 class="img-fluid" alt="Participe">
 </p>
 
 
@@ -76,7 +74,7 @@ Em função disso, a SME está disponibilizando 04(quatro) propostas de calendá
 
         <!-- Copyright Section-->
 
-        <img src="assets/img/bg_educ.png" class="img-fluid" alt="Secretaria de Educação de Guamaré">
+        <img src="assets/img/bg_educ.png"  href="https://forms.gle/ZZjp88aHh7SiKo5X9 class="img-fluid" alt="Participe da Consulta">
         <section class="copyright py-4 text-center text-white">
             <div class="container"><small class="pre-wrap">Feito com ❤️ pela Secretaria de Educação de Guamaré. </small></div>
         </section>
