--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="pre-wrap masthead-subheading font-weight-light mb-0"> 
-Considerando a importância da parceria e da opinião de toda comunidade escolar, a Prefeitura Municipal de Guamaré(RN), através da Secretaria Municipal de Educação, elaborou uma consulta pública que está direcionada aos pais, professores, funcionários da Educação e toda a <mark>comunidade escolar</mark> sobre o calendário da rede municipal de educação para o ano de 2022.
+Considerando a importância da parceria e da opinião de toda comunidade escolar, a Prefeitura Municipal de Guamaré(RN), através da Secretaria Municipal de Educação, elaborou uma consulta pública que está direcionada aos <mark>alunos</mark>, pais, professores, funcionários da Educação e toda a comunidade escolar sobre o calendário da rede municipal de educação para o ano de 2022.
 
-Em função disso, a SME está disponibilizando 04(quatro) propostas de calendário letivo para 2022, todas elaboradas pela equipe técnico-pedagógica da secretaria, para que assim a comunidade escolar possa participar ativamente do processo de confecção do calendário escolar. <mark>Sua participação é fundamental</mark>.
+Em função disso, a SME está disponibilizando 04(quatro) propostas de calendário letivo para 2022, todas elaboradas pela equipe técnico-pedagógica e do setor de inspeção escolar da secretaria, para que assim a comunidade escolar possa participar ativamente do processo de confecção do calendário escolar. <mark>Sua participação é fundamental</mark>.
 </p>
             </div>
         </header>
