--- a/index.html
+++ b/index.html
@@ -51,18 +51,22 @@ Em função disso, a SME está disponibilizando 04(quatro) propostas de calendá
                 <!-- Masthead Subheading-->
                 <p class="pre-wrap masthead-subheading font-weight-light mb-0">
 
-                	A paralisação das aulas presenciais do ano letivo de 2020 ocasionada pelo Decreto Estadual n° 29.524, de 17 de março de 2020, e Decreto Municipal n° 008, de 17 de março de 2020, e seus consecutivos decretos que prorrogaram e estenderam a suspensão durante todo o ano, resultaram em um déficit significativo de horas letivas.
+O art. 206, em seu inciso VI, da Constituição Federal Brasileira, reiterado pelo inciso VIII, do art. 3°, da LDB, define a Gestão Democrática como um dos princípios da educação brasileira, esta entendida como um processo de descentralização na tomada das decisões, de participação democrática e de transparência na gestão.
 
-                	Este documento apresenta a carga horária cumprida no ano de 2020 e a carga horária a ser cumprida no ano de 2021. Dessa forma, esta consulta pública pretende coletar contribuições a respeito da distribuição da carga horária referente apenas ao ano de 2021, uma vez que o ano de 2020 já encontra-se consolidado.
+A gestão democrática pressupõe a participação efetiva dos vários segmentos da comunidade escolar – alunos, pais de alunos, professores e demais funcionários – em todos os aspectos da organização da escola, entre eles o Calendário Letivo.
 
-                	Sendo assim, a Comunidade Escolar, após fazer a leitura do documento disponibilizado aqui, poderá dar a sua contribuição através do formulário abaixo.
+Além dos processos de participação e do envolvimento dos segmentos citados, faz-se necessário envolver instâncias deliberativas que viabilizem esse modelo de gestão, com destaque para a atuação do Conselho Municipal de Educação – CME.
+
+Nesse sentido, nada mais salutar do que dar voz aos segmentos que compõem a comunidade escolar, com o intuito de auxiliar o CME na tomada de decisão a respeito do Calendário Letivo para o ano de 2022.
+
+Sendo assim, após fazer a leitura das propostas disponibilizadas em PDF logo abaixo, você também poderá dar a sua contribuição através do formulário no banner no final da página. <mark>Participe!  Sua colaboração é fundamental para a educação de Guamaré.</mark>
 
 
               <div class="btn-group btn-group-lg" role="group" aria-label="Propostas">
-                 <a button type="button" class="btn btn-primary" href="docs/calendario1.pdf"> 📆 Proposta 01</a>
-                 <a button type="button" class="btn btn-secondary" href="docs/calendario2.pdf"> 📆 Proposta 02</a>
-                 <a button type="button" class="btn btn-danger" href="docs/calendario3.pdf"> 📆 Proposta 03</a>
-                 <a button type="button" class="btn btn-warning" href="docs/calendario4.pdf"> 📆 Proposta 04</a></div>
+                 <a button type="button" class="btn btn-secondary" href="docs/calendario1.pdf"> 📆 Proposta 01</a>
+                 <a button type="button" class="btn btn-primary" href="docs/calendario2.pdf"> 📆 Proposta 02</a>
+                 <a button type="button" class="btn btn-warning" href="docs/calendario3.pdf"> 📆 Proposta 03</a>
+                 <a button type="button" class="btn btn-danger" href="docs/calendario4.pdf"> 📆 Proposta 04</a></div>
             </div>
             <p>
 </p>
