--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Sendo assim, após fazer a leitura das propostas disponibilizadas em PDF logo ab
 
         <!-- Copyright Section-->
 
-        <img src="assets/img/bg_educ.png"  href="https://forms.gle/ZZjp88aHh7SiKo5X9 class="img-fluid" alt="Participe da Consulta">
+        <img src="assets/img/bannerconsulta.png"  href="https://forms.gle/kcNpR4RHpsvgTZ2Z6 class="img-fluid" alt="Participe da Consulta">
         <section class="copyright py-4 text-center text-white">
             <div class="container"><small class="pre-wrap">Feito com ❤️ pela Secretaria de Educação de Guamaré. </small></div>
         </section>
