--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@ Sendo assim, após fazer a leitura das propostas disponibilizadas em PDF logo ab
                  <a button type="button" class="btn btn-danger" href="docs/calendario4.pdf"> 📆 Proposta 04</a></div>
             </div>
             <p>
+                 <div class="btn-group btn-group-lg" role="group" aria-label="Formulário">
+                 <a button type="button" class="btn btn-info" href="https://forms.gle/kcNpR4RHpsvgTZ2Z6">💬 Participe da Consulta</a>
+            </div>
 </p>
 
 
@@ -78,7 +81,7 @@ Sendo assim, após fazer a leitura das propostas disponibilizadas em PDF logo ab
 
         <!-- Copyright Section-->
 
-        <img src="assets/img/bannerconsulta.png"  href="https://forms.gle/kcNpR4RHpsvgTZ2Z6 class="img-fluid" alt="Participe da Consulta">
+        <img src="assets/img/banner.png"  class="img-fluid" alt="Participe da Consulta">
         <section class="copyright py-4 text-center text-white">
             <div class="container"><small class="pre-wrap">Feito com ❤️ pela Secretaria de Educação de Guamaré. </small></div>
         </section>
