--- a/index.html
+++ b/index.html
@@ -62,16 +62,15 @@ Nesse sentido, nada mais salutar do que dar voz aos segmentos que compõem a com
 Sendo assim, após fazer a leitura das propostas disponibilizadas em PDF logo abaixo, você também poderá dar a sua contribuição através do formulário no banner no final da página. <mark>Participe!  Sua colaboração é fundamental para a educação de Guamaré.</mark>
 
 
-              <div class="btn-group btn-group-lg" role="group" aria-label="Propostas">
+              <div class="btn-group-vertical" role="group" aria-label="Propostas">
                  <a button type="button" class="btn btn-secondary" href="docs/calendario1.pdf"> 📆 Proposta 01</a>
                  <a button type="button" class="btn btn-primary" href="docs/calendario2.pdf"> 📆 Proposta 02</a>
                  <a button type="button" class="btn btn-warning" href="docs/calendario3.pdf"> 📆 Proposta 03</a>
                  <a button type="button" class="btn btn-danger" href="docs/calendario4.pdf"> 📆 Proposta 04</a></div>
             </div>
             <p>
-                 <div class="btn-group btn-group-lg" role="group" aria-label="Formulário">
-                 <a button type="button" class="btn btn-info" href="https://forms.gle/kcNpR4RHpsvgTZ2Z6">💬 Participe da Consulta</a>
-            </div>
+                <button type="button" class="btn btn-success" ref="https://forms.gle/kcNpR4RHpsvgTZ2Z6" aria-label="Formulário">💬 Participe da Consulta</button>
+
 </p>
 
 
