--- a/index.html
+++ b/index.html
@@ -68,10 +68,9 @@ Sendo assim, após fazer a leitura das propostas disponibilizadas em PDF logo ab
                  <a button type="button" class="btn btn-warning" href="docs/calendario3.pdf"> 📆 Proposta 03</a>
                  <a button type="button" class="btn btn-danger" href="docs/calendario4.pdf"> 📆 Proposta 04</a></div>
             </div>
-            <p>
-                <button type="button" class="btn btn-success" ref="https://forms.gle/kcNpR4RHpsvgTZ2Z6" aria-label="Formulário">💬 Participe da Consulta</button>
 
-</p>
+            
+            <p><button type="button" class="btn btn-primary btn-lg btn-block" ref="https://forms.gle/kcNpR4RHpsvgTZ2Z6">💬 Participe da Consulta</button></p>
 
 
             </div>
