--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Em função disso, a SME está disponibilizando 04(quatro) propostas de calendá
             <div class="container">
                 <!-- Contact Section Heading-->
                 <div class="text-center">
-                    <h2 class="page-section-heading text-danger d-inline-block mb-0">As Propostas</h2>
+                    <h2 class="page-section-heading text-primary d-inline-block mb-0">As Propostas</h2>
                 </div>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
@@ -66,13 +66,10 @@ Sendo assim, após fazer a leitura das propostas disponibilizadas em PDF logo ab
 Confira abaixo cada uma das 04(quatro) propostas de calendário letivo preparada pela nossa equipe técnica: </p>
 
 <div class="list-group">
-  <a href="#" class="list-group-item list-group-item-action active">
-    Confira as propostas de calendário:
-  </a>
   <a href="docs/calendario1.pdf" class="list-group-item list-group-item-action">📆 Proposta 01</a>
   <a href="docs/calendario2.pdf" class="list-group-item list-group-item-action">📆 Proposta 02</a>
   <a href="docs/calendario3.pdf" class="list-group-item list-group-item-action">📆 Proposta 03</a>
-  <a href="docs/calendario4.pdf" class="list-group-item list-group-item-action disabled">📆 Proposta 04</a>
+  <a href="docs/calendario4.pdf" class="list-group-item list-group-item-action">📆 Proposta 04</a>
 </div>
                 
  <p class="pre-wrap masthead-subheading font-weight-light mb-0">
