--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Em função disso, a SME está disponibilizando 04(quatro) propostas de calendá
             <div class="container">
                 <!-- Contact Section Heading-->
                 <div class="text-center">
-                    <h2 class="page-section-heading text-primary d-inline-block mb-0">As Propostas</h2>
+                    <h2 class="page-section-heading text-danger d-inline-block mb-0">As Propostas</h2>
                 </div>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
@@ -76,7 +76,7 @@ Confira abaixo cada uma das 04(quatro) propostas de calendário letivo preparada
 
 Após analisar todas as propostas, participe da Consulta Pública sobre o Calendário Escolar 2022: </p>
                 
-        <a class="btn btn-primary btn-lg btn-block" href="https://forms.gle/kcNpR4RHpsvgTZ2Z6" role="button">💬 Participe da Consulta</a>        
+        <a class="btn btn-danger btn-lg btn-block" href="https://forms.gle/kcNpR4RHpsvgTZ2Z6" role="button">💬 Participe da Consulta</a>        
 
         </section>
 
